# advent_of_code_2024

./: README.md  code.py  pyproject.toml
.cursor/rules/: advent_of_code.mdc
src/: day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_9.py  first.py  llm.py  settings.py  template.py  utils.py
src/2020/day_1/: part_1.py
src/2024/: day_1.py  day_2.py  day_8.py
src/2025/day_1/: part_1.py  part_2.py
src/2025/day_10/: part_1.py  part_2.py
src/2025/day_11/: part_1.py  part_2.py
src/2025/day_12/: part_1.py  part_2.py
src/2025/day_2/: part_1.py  part_2.py
src/2025/day_3/: part_1.py  part_2.py
src/2025/day_4/: part_1.py  part_2.py
src/2025/day_5/: part_1.py  part_2.py
src/2025/day_6/: part_1.py  part_2.py
src/2025/day_7/: part_1.py  part_2.py
src/2025/day_8/: part_1.py  part_2.py
src/2025/day_9/: part_1.py  part_2.py
src/template/: part_1.py  part_2.py  statement.py
