[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "My solutions for the Advent of Code 2024"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "numpy>=2.1.3",
    "openai>=1.78.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
