[project]
name = "advent-of-code"
version = "0.1.0"
description = "My solutions for the Advent of Code"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "beautifulsoup4>=4.13.4",
    "networkx>=3.6",
    "numpy>=2.1.3",
    "openai>=1.78.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "N",
    "S",
    "TRY",
    "T20",
    "SLF",
    "SIM",
    "PTH",
    "FLY",
    "LOG",
    "ARG",
    "PD",
    "NPY",
    "PERF",

]
ignore = ["N818", "PTH123", "TRY003"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = true

docstring-code-line-length = "dynamic"
